Big changes and bug fixes, add Exception handling, separated main, some small changes in Finances, add a little more documentation.